--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/styles.css">
+    <title>Quiz App</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-
-  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@basicdaydreams/video/7347461746313153838" data-video-id="7347461746313153838" style="max-width: 605px;min-width: 325px;">
-    <section>
-        <a target="_blank" title="@basicdaydreams" href="https://www.tiktok.com/@basicdaydreams?refer=embed">@basicdaydreams</a>
-        <a title="capcut" target="_blank" href="https://www.tiktok.com/tag/capcut?refer=embed">#CapCut</a>
-        <a target="_blank" title="♬ original sound - Isma" href="https://www.tiktok.com/music/original-sound-7347461869327764270?refer=embed">♬ original sound - Isma</a>
-    </section>
-</blockquote>
-<script async src="https://www.tiktok.com/embed.js"></script>
+    <div id="quiz-container">
+        <div id="question"></div>
+        <div id="answers"></div>
+        <button id="submit">Submit Answer</button>
+        <div id="result"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
