--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <button id="submit">Submit Answer</button>
         <div id="result"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
