--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Quiz App</title>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div id="quiz-container">
@@ -11,6 +11,6 @@
         <button id="submit">Submit Answer</button>
         <div id="result"></div>
     </div>
-    <script src="/Script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
