--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size: 16px;}
 img {margin-bottom: -8px;}
 .mySlides {display: none;}
+        #quiz-container {
+    width: 300px;
+    margin: auto;
+    text-align: center;
+}
+
+#question {
+    margin-bottom: 20px;
+}
+
+button {
+    margin-top: 20px;
+}
 </style>
 </head>
 
