--- a/index.html
+++ b/index.html
@@ -3,74 +3,84 @@
 <head>
     <title>Quiz App</title>
     <style>
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size: 16px;}
-img {margin-bottom: -8px;}
-.mySlides {display: none;}
+        body, h1, h2, h3, h4, h5 {font-family: "Poppins", sans-serif}
+        body {font-size: 16px;}
+        img {margin-bottom: -8px;}
+        .mySlides {display: none;}
         #quiz-container {
-    width: 300px;
-    margin: auto;
-    text-align: center;
-}
-
-#question {
-    margin-bottom: 20px;
-}
-
-button {
-    margin-top: 20px;
-}
-</style>
+            width: 300px;
+            margin: auto;
+            text-align: center;
+        }
+        #question {
+            margin-bottom: 20px;
+        }
+        button {
+            margin-top: 20px;
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-
 <body>
-    <div id="quiz-container">
-        <div id="question"></div>
-        <div id="answers"></div>
-        <button id="submit">Submit Answer</button>
-        <div id="result"></div>
-    </div>
-    <script>
-        const questions = [
-    {
-        question: "What is 2+2?",
-        answers: ["2", "3", "4", "5"],
-        correct: "4"
-    },
-    {
-        question: "Capital of France?",
-        answers: ["Paris", "London", "Berlin", "Madrid"],
-        correct: "Paris"
-    }
-    // Add more questions here
-];
 
-function displayQuestion() {
-    const qIndex = Math.floor(Math.random() * questions.length);
-    const q = questions[qIndex];
+<div id="quiz-container">
+    <div id="question"></div>
+    <div id="answers"></div>
+    <button id="submit" style="display:none;">Submit Answer</button>
+    <div id="result"></div>
+</div>
 
-    document.getElementById('question').innerText = q.question;
-    const answersEl = document.getElementById('answers');
-    answersEl.innerHTML = ""; // Clear previous answers
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const questions = [
+        {
+            question: "What is 2+2?",
+            answers: ["2", "3", "4", "5"],
+            correct: "4"
+        },
+        {
+            question: "Capital of France?",
+            answers: ["Paris", "London", "Berlin", "Madrid"],
+            correct: "Paris"
+        }
+        // Add more questions here
+    ];
 
-    q.answers.forEach(answer => {
-        const button = document.createElement('button');
-        button.innerText = answer;
-        button.onclick = () => checkAnswer(answer, q.correct);
-        answersEl.appendChild(button);
-    });
-}
+    let currentQuestionIndex = 0;
 
-function checkAnswer(selected, correct) {
-    const resultEl = document.getElementById('result');
-    if (selected === correct) {
-        resultEl.innerText = "Correct!";
-    } else {
-        resultEl.innerText = "Wrong answer. Try again!";
+    function displayQuestion() {
+        if(currentQuestionIndex >= questions.length) {
+            document.getElementById('result').innerText = "Quiz completed!";
+            return;
+        }
+        const q = questions[currentQuestionIndex];
+        document.getElementById('question').innerText = q.question;
+        const answersEl = document.getElementById('answers');
+        answersEl.innerHTML = ""; // Clear previous answers
+        q.answers.forEach(answer => {
+            const button = document.createElement('button');
+            button.innerText = answer;
+            button.onclick = () => checkAnswer(answer, q.correct);
+            answersEl.appendChild(button);
+        });
     }
 
-    setTimeout(displayQuestion, 2000); // Display next question after 2 seconds
-}
-    </script>
+    function checkAnswer(selected, correct) {
+        const resultEl = document.getElementById('result');
+        if (selected === correct) {
+            resultEl.innerText = "Correct!";
+        } else {
+            resultEl.innerText = "Wrong answer. Try again!";
+        }
+        currentQuestionIndex++;
+        setTimeout(displayQuestion, 2000); // 
+    }
+
+    displayQuestion();
+});
+</script>
+
 </body>
 </html>
